[gd_scene load_steps=4 format=2]

[ext_resource path="res://Turrets/TorpedoTurret.gd" type="Script" id=1]
[ext_resource path="res://MuzzleAnimation.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 665.057

[node name="Turret" type="Node2D"]
script = ExtResource( 1 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 0.103611, 34.4554 )

[node name="Sprite" type="Sprite" parent="."]

[node name="FireDelay" type="Timer" parent="."]

[node name="MuzzleAnimation" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( -6.11316, 38.7512 )
animation = "default"
frame = 4
speed_scale = 0.8

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
[connection signal="timeout" from="FireDelay" to="." method="_on_FireDelay_timeout"]
[connection signal="animation_finished" from="MuzzleAnimation" to="." method="_on_MuzzleAnimation_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
